# hybrid-search-rs-4

./: # 宿題.md  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  about.toml  deny.toml  developer_task.md
.github/workflows/: cargo-deny.yml
about/templates/: third-party-licenses.hbs
chunk-model/: Cargo.toml  README.md
chunk-model/src/: lib.rs
chunking-store/: Cargo.toml  README.md
chunking-store/examples/: delete_demo.rs  ingest_demo.rs  lindera_check.rs  tantivy_demo.rs
chunking-store/src/: fts5_index.rs  hnsw_index.rs  lib.rs  orchestrator.rs  sqlite_repo.rs  tantivy_index.rs
docs/: compliance.md
embedding_provider/: Cargo.toml  README.md
embedding_provider/models/: README.md
embedding_provider/src/: config.rs  lib.rs
embedding_provider/src/embedder/: mod.rs
embedding_provider/tests/: embedder_tests.rs
file-chunker/: Cargo.toml  README.md
file-chunker/src/: chunker_rules_jp.rs  lib.rs  pdf_chunker.rs  reader_docx.rs  reader_excel.rs  reader_pdf.rs  reader_pdf_pdfium.rs  reader_pdf_pure.rs  reader_pptx.rs  reader_txt.rs  text_segmenter.rs  unified_blocks.rs
reports/: THIRD-PARTY-LICENSES.txt  THIRD-PARTY-NOTICES.txt  cargo-audit.json  cargo-audit.txt  license.json  license.txt
scripts/: clean_dbs.ps1  generate_reports.ps1  generate_reports.sh  migrate_testdata.ps1  package_pdf_block_viewer.ps1
service/hybrid-service/: Cargo.toml  README.md
service/hybrid-service/examples/: ingest_and_search.rs
service/hybrid-service/src/: lib.rs
testdata/: README.md
testdata/public/: Word変換検証サンプル（DOCX構造確認用）_v0.1.docx  one_col_10_records_with_header_utf8.csv  one_col_300_records_with_header_utf8bom.csv  test_excel_table_and_description.xlsx  ここに貴重な資料があります.txt  嘘のハイブリッド検索システム詳細版.docx  嘘の再エネ発電量レポート（Excel埋め込み版）.docx
tools/chunker-viewer/: Cargo.toml
tools/chunker-viewer/src/: main.rs
tools/embedder-demo/: Cargo.toml
tools/embedder-demo/src/: main.rs
tools/embedder-demo/testdata/: README.md
tools/embedder-demo/testdata/small/: one_col_10_records_with_header.xlsx  one_col_10_records_with_header_sjis.csv  one_col_10_records_with_header_utf8bom.csv  one_col_300_records_with_header.xlsx  one_col_300_records_with_header_utf8bom.csv
tools/hybrid-orchestrator/: Cargo.toml  README.md
tools/hybrid-orchestrator-gui/: Cargo.toml  README.md
tools/hybrid-orchestrator-gui/src/: main.rs
tools/hybrid-orchestrator/src/: main.rs
tools/hybrid-service-gui/: Cargo.toml
tools/hybrid-service-gui/src/: main.rs
tools/pdf-block-viewer/: Cargo.toml
tools/pdf-block-viewer/src/: main.rs
tools/tokenize-lab/: Cargo.toml
tools/tokenize-lab/src/: main.rs
