[workspace]
members = [
    "file-chunker",
    "chunking-store",
    "chunk-model",
    "embedding_provider",
    "tools/embedder-demo",
    "tools/chunker-viewer",
    "tools/pdf-block-viewer",
    "tools/hybrid-orchestrator",
    "tools/hybrid-orchestrator-gui",
    "tools/tokenize-lab",
]

resolver = "2"
