[package]
name = "chunking-store"
version = "0.1.0"
edition = "2021"

[lib]
name = "chunking_store"
path = "src/lib.rs"

[dependencies]
chunk-model = { path = "../chunk-model" }
rusqlite = { version = "0.31", features = ["bundled", "unlock_notify"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tantivy = "0.22"
chrono = { version = "0.4" }

[features]
tantivy-impl = []

