[package]
name = "embedding-provider"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "embedding_provider"
path = "src/lib.rs"

[dependencies]
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
thiserror = "1.0"
tokenizers = "0.22.1"
ndarray = "0.16"

[dev-dependencies]
tempfile = "3.10"
