[package]
name = "file-chunker"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "file_chunker"
path = "src/lib.rs"

[dependencies]
chunk-model = { path = "../chunk-model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
zip = "0.6"
quick-xml = "0.31"
encoding_rs = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
calamine = "0.23"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem"
] }

[features]
default = []
# Enable PDF backends selectively.
pdfium = ["dep:pdfium-render"]
pure-pdf = ["dep:lopdf"]

[dependencies.pdfium-render]
version = "0.8"
optional = true

[dependencies.lopdf]
version = "0.32"
optional = true

