[package]
name = "hybrid-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chunk-model = { path = "../../chunk-model" }
chunking-store = { path = "../../chunking-store" }
# Enable PDF backends so actual PDFs are chunked (not stubbed)
file-chunker = { path = "../../file-chunker", features = ["pdfium", "pure-pdf"] }
embedding-provider = { path = "../../embedding_provider" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
sha2 = "0.10"

[features]
default = []
tantivy = ["chunking-store/tantivy-impl"]
fts = ["chunking-store/fts"]
