[package]
name = "embedder-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
rfd = "0.14"
embedding-provider = { path = "../../embedding_provider" }
calamine = "0.31"
rust_xlsxwriter = "0.90.2"
csv = "1.3"
encoding_rs = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
