[package]
name = "hybrid-service-gui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
egui_extras = "0.27"
rfd = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hybrid-service = { path = "../../service/hybrid-service", features = ["tantivy"] }
embedding-provider = { path = "../../embedding_provider" }
chunking-store = { path = "../../chunking-store" }
chunk-model = { path = "../../chunk-model" }
encoding_rs = "0.8"
file-chunker = { path = "../../file-chunker" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rayon = "1.8"

[features]
default = ["tantivy"]
tantivy = ["chunking-store/tantivy-impl"]

