[package]
name = "pdf-block-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
rfd = "0.14"
serde_json = "1"
file-chunker = { path = "../../file-chunker" }

[features]
# Enable both backends by default so `cargo run -p pdf-block-viewer`
# lets you choose Pure-Rust or PDFium at runtime.
default = ["pdfium", "pure-pdf"]
pdfium = ["file-chunker/pdfium"]
pure-pdf = ["file-chunker/pure-pdf"]
