[package]
name = "tokenize-lab"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
egui_extras = "0.27"
tantivy = "0.25"
lindera = { version = "1.4", default-features = false, features = ["embedded-ipadic"] }
lindera-tantivy = { version = "1", default-features = false, features = ["embedded-ipadic"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
